# Tunisian-data-collection

./: .gitignore  ArPanEmo_test_clean.xlsx  ArPanEmo_train_clean.xlsx  collect.py  collected_dataset.xlsx  fix_jsonl.py  main.py  merge_collected_data.py  merge_datasets.py  merged_dataset.xlsx  pyproject.toml
collected_data/: data_reddit_id_1n9f4q9_20251029_234109_fixed.jsonl  data_reddit_id_1ng4yg3_20251029_234130_fixed.jsonl  data_reddit_id_1ohpupy_20251029_234123_fixed.jsonl  data_reddit_id_1oizfet_20251029_234136_fixed.jsonl  data_reddit_id_1oj6b0l_20251029_234116_fixed.jsonl  data_youtube_id_8wlN5coe_20251029_234025_fixed.jsonl  data_youtube_id_9bmG_8-U_20251029_233917_fixed.jsonl  data_youtube_id_J3ekaaxh_20251029_150316_fixed.jsonl  data_youtube_id_P9YsWNho_20251029_233849_fixed.jsonl  data_youtube_id_bS4VpsEI_20251029_234041_fixed.jsonl  data_youtube_id_c7bNxL5X_20251029_233926_fixed.jsonl  data_youtube_id_cs_IfoSh_20251029_234030_fixed.jsonl  data_youtube_id_e9Zu1sCx_20251029_233636_fixed.jsonl  data_youtube_id_gd_YgVui_20251029_233900_fixed.jsonl  data_youtube_id_nXDYorO5_20251029_233907_fixed.jsonl
collectors/: __init__.py  base_collector.py  reddit_collector.py  twitter_collector.py  youtube_collector.py
tunisian_data_collection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
utils/: config.py
